<resources>
    <string name="app_name">Account management system</string>
    <string name="action_account">User</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_forget_pwd">Forget the password?</string>
    <string name="action_next_step">Next step</string>
    <string name="action_complete">Complete</string>
    <string name="action_unbind">Unbundling</string>
    <string name="action_change_mail">Replace mailbox</string>
    <string name="action_change_phone">Change the phone</string>
    <string name="action_send_vercode">Send code</string>
    <string name="action_send_vercode_disable">%1$d seconds</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_input_password">Input account password</string>

    <string name="label_account">Account</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm password</string>
    <string name="label_phone_number">Phone number</string>
    <string name="label_vercode">Code</string>
    <string name="login_type_password">Account password login</string>
    <string name="login_type_vercode">Authentication code login</string>
    <string name="format_size">6-16 characters</string>
    <string name="format_content">Contains Numbers and English letters</string>
    <string name="title_details">Detailed information</string>
    <string name="title_mailbox">Mailbox</string>
    <string name="title_modify_password">Modify the password</string>
    <string name="title_getback_password">Retrieve password</string>
    <string name="title_name">Name</string>
    <string name="title_phone_number">@string/label_phone_number</string>
    <string name="title_birthday">Birthday</string>
    <string name="title_select_birthday">Choose birthday</string>
    <string name="title_sex">Gender</string>
    <string name="title_select_gender">Choose gender</string>
    <string name="title_region">Area</string>
    <string name="title_set_new_password">Set new password</string>
    <string name="title_set_password">Set password</string>
    <string name="title_verify_password">Verify password</string>
    <string name="title_bind_mailbox">Binding email</string>
    <string name="title_bind_new_mailbox">Binding new email</string>
    <string name="title_unbind_mailbox">Unbundling email</string>
    <string name="title_bind_phone">Binding mobile phone</string>

    <string name="verify_type_phone_number">Switch to mobile phone validation</string>
    <string name="verify_type_mailbox">Switch to mailbox validation</string>

    <string name="summary_name_empty">Click on perfect information</string>
    <string name="summary_bind">Binding</string>
    <string name="summary_unbind">Unbounded</string>
    <string name="summary_eidt_photo">Edit avatar</string>
    <string name="summary_settings">@string/action_settings</string>
    <string name="summary_select_region">Choose area</string>

    <string name="hint_mailbox_vercode">Check the mailbox for verification code</string>

    <string name="item_take_photo">Take photo</string>
    <string name="item_pick_photo">Selection from gallery</string>
    <string name="item_male">male</string>
    <string name="item_female">female</string>

    <string name="photo_file_provider_authority" translatable="false">com.android.accountmanager.files</string>
    <string name="accountPhotoSavedErrorToast">Unable to save user photo changes</string>
    <string name="photoPickerNotFoundText">No photos on the phone</string>
    <string name="format_birthday" translatable="false">%1$d-%2$02d-%3$02d</string>

    <string name="toast_please_input_correct_phone_number">Please enter the correct phone number</string>
    <string name="toast_please_input_correct_mailbox">Please enter the correct mailbox</string>
    <string name="toast_please_input_correct">Please enter the correct phone number or email address</string>
    <string name="toast_login_name_not_regular">The login name is illegal</string>
    <string name="toast_vercode_error">Verification code error</string>
    <string name="toast_password_error">Password error</string>
    <string name="toast_account_password_error">Incorrect username or password</string>
    <string name="toast_account_not_exist">User does not exist</string>
    <string name="toast_account_exist">User already exists</string>
    <string name="toast_phonenumber_is_used">The phone number has been registered</string>
    <string name="toast_mailbox_is_used">The mailbox has been registered</string>
    <string name="toast_password_format">The password length is between 6-16</string>
    <string name="toast_password_not_equals">Two inputted password inconsistencies</string>
    <string name="toast_register_success">Registered successfully</string>
    <string name="toast_register_failed">Registration failed</string>
    <string name="toast_network_exception">Network anomalies</string>
    <string name="toast_invalid_param">Invalid parameter</string>
    <string name="toast_unknown_error">Unknown error</string>
    <string name="toast_param_error">Parameter error</string>
    <string name="toast_login_success">Landing success</string>
    <string name="toast_bind_mailbox">Binding success</string>
    <string name="toast_reset_password_success">Set up success</string>
    <string name="toast_unbind_email_success">Untie success</string>
    <string name="toast_email_not_exist">Mailbox does not exist</string>
    <string name="toast_permission_granted">Permission to succeed</string>
    <string name="toast_permission_not_granted">Some functions may not be used properly</string>

    <string name="page_normal_problem">Common problems</string>
    <string name="page_my_feedback">My feedback</string>
    <string name="third_party_application">Third-party application</string>
    <string name="feedback_title">Your problem</string>
    <string name="feedback_content">Please describe the problem you encountered, and submit the problem to the network.\nIf you have multiple problems, separate them with newlines so that we can better identify your problems.</string>
    <string name="feedback_commit">Commit</string>
    <string name="feedback_commit_toast">Feedback has been submitted, Thank you</string>
    <string name="feedback_need_login">Logon to reflect the problem</string>
    <string name="feedback_empty_list">No feedback at all</string>
    <string name="feedback_login">Login immediately</string>
    <string name="feedback_commit_null">The submission should not be empty</string>
    <string name="feedback_details_tile">Feedback details</string>
    <string name="feedback_question_label">Problem feedback</string>
    <string name="feedback_content_request_back">Thank you for your support and attention, we will seriously deal with your feedback, restore and improve the relevant functions as soon as possible</string>

    <string name="network_not_link">Network unconnected</string>
    <string name="network_check">Please check whether the network Settings are normal</string>
    <string name="network_set">Set up network</string>

    <string name="text_login_name_hint">Phone number/mailbox</string>
    <string name="text_login_password_hint">password</string>
    <string name="text_login_vercode_hint">Code</string>
    <string name="text_singout_hit">Please enter your account password to log out</string>
    <string name="text_currrent_accoutn">Current account</string>
    <string name="text_new_password_hint">New password</string>
    <string name="text_password_not_equals">The two passwords are not consistent, please re-enter</string>
    <string name="text_password_incorrect">Password error, please retype</string>
    <string name="text_unknow_account">Unknown information</string>
    <string name="text_tile_verty">For login, reset, authenticate</string>
    <string name="text_login_title">Account system</string>
    <string name="text_pick_birthday_year">year</string>
    <string name="text_pick_birthday_month">month</string>
    <string name="text_pick_birthday_day">day</string>
    <string name="text_feedback_center_title">Feedback Center</string>
</resources>
