<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_title_marginbottom"
        android:background="@drawable/ic_login_header_bg">

        <TextView
            android:id="@+id/login_header_title"
            style="@style/LoginTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="账户系统" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="wrap_content"
        android:layout_height="32.7dp"
        android:layout_marginBottom="19dp"
        android:gravity="center"
        android:visibility="invisible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_error" />

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:text="@string/toast_please_input_correct_mailbox"
            android:textColor="@color/error_text_color"
            android:textSize="@dimen/text_normal_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/name_layout"
        style="@style/formStyle">

        <ImageView
            android:id="@+id/image_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_label_account" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_login_name"
            style="@style/editStyle"
            android:hint="@string/text_login_name_hint"
            android:inputType="text" />

        <ImageView
            android:id="@+id/name_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            android:visibility="invisible" />
    </LinearLayout>

    <View style="@style/dividerStyle" />

    <LinearLayout
        android:id="@+id/ly_password"
        style="@style/formStyle">

        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_label_password" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                style="@style/editStyle"
                android:hint="@string/text_login_password_hint"
                android:inputType="textPassword"
                android:maxLength="16" />

            <ImageView
                android:id="@+id/password_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete"
                android:visibility="invisible" />
        </LinearLayout>


        <ToggleButton
            android:id="@+id/sw_show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_variation_password"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:textOff="@null"
            android:textOn="@null" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_vercode"
        style="@style/formStyle"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/vercode_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_vercode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_label_vercode" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_vercode"
                style="@style/editStyle"
                android:hint="@string/text_login_vercode_hint" />

            <ImageView
                android:id="@+id/vercode_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete"
                android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:id="@id/send_vercode"
            android:layout_width="122dp"
            android:layout_height="match_parent"
            android:background="@drawable/action_bt_bg"
            android:gravity="center"
            android:maxLength="8"
            android:padding="4dp"
            android:singleLine="true"
            android:text="@string/action_send_vercode"
            android:textColor="@color/white"
            android:textSize="@dimen/text_normal_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/action_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="30.7dp"
        android:layout_marginTop="@dimen/login_forget_margintop"
        android:autoLink="all"
        android:text="@string/action_forget_pwd"
        android:textColor="@color/text_blue_color"
        android:textSize="@dimen/text_normal_size" />

    <Button
        android:id="@+id/action_login"
        style="@style/stepButtonStyle"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="31dp"
        android:background="@drawable/button_login_bg"
        android:enabled="false"
        android:text="@string/action_login" />

    <Button
        android:id="@+id/action_to_register"
        style="@style/stepButtonStyle"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_register_bg"
        android:text="@string/action_register"
        android:textColor="@color/text_blue_color" />

    <TextView
        android:id="@+id/wy_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25.3dp"
        android:autoLink="all"
        android:text="@string/login_type_vercode"
        android:textColor="@color/text_blue_color"
        android:textSize="@dimen/text_normal_size" />
</LinearLayout>
